<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="bienvenido">Segunda Pantalla</string>
    <string name="sum">Sum</string>
    <string name="subs">Subs</string>
    <string name="multi">Multi</string>
    <string name="divide">Div</string>
    <string name="press">Press to go next screen</string>
    <string name="input">Input two numbers to sum:</string>
    <string name="first_number">Input the first number:</string>
    <string name="second_number">Input the second number:</string>
    <string name="number">number</string>
    <string name="result">the result is:</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>

</resources>
