<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".MainActivity">

    <TextView
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="100"
    android:orientation="vertical"
    >

    <TextView
    android:textSize="20sp"
    android:text="@string/first_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/input_one"
        android:hint="@string/number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rows"/>
    <TextView
        android:textSize="20sp"
        android:text="@string/second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/input_two"
        android:hint="@string/number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rows"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_weight="25"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sum"
            android:id="@+id/sum_button"
            />
        <Button
            android:layout_weight="25"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subs"
            android:id="@+id/sub_button"
            />
        <Button
            android:layout_weight="25"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            android:id="@+id/multiplication_button"
            />

        <Button
            android:layout_weight="25"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:id="@+id/divide_button"
            />


        </LinearLayout>


</LinearLayout>
</LinearLayout>
